# d2l-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  playwright.config.js
.github/: copilot-instructions.md
.github/workflows/: a11y-ci.yml  api-ci.yml  prompt-regression.yml  security-prompt-injection.yml  terraform-azure-ci.yml
apps/admin/fixtures/: admin-console.html
apps/admin/tests/: a11y.spec.js  a11y.spec.mjs
apps/api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  logging.py  main.py  settings.py  telemetry.py  usage_metering.py
apps/api/app/audit/: log.py
apps/api/app/brightspace/: __init__.py  clients.py  content_client.py  models.py  oauth_client.py  question_library_client.py  retry.py  token_store.py
apps/api/app/llm/: __init__.py  gateway.py  providers.py  scrub.py  types.py
apps/api/app/lti/: config.py  deep_linking.py  routes.py  state.py
apps/api/app/workflows/: u2_module_summary.py  u3_quiz_generation.py
apps/api/d2l_ai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: __init__.py  test_deep_linking.py  test_health.py  test_llm_gateway.py  test_lti_launch.py  test_oauth_client.py  test_usage_metering.py
apps/api/tests/brightspace/: test_clients.py
apps/api/tests/workflows/: test_u2_module_summary.py  test_u3_quiz_generation.py
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/fixtures/: use-case-preview.html
apps/web/src/: App.css  App.tsx  custom-elements.d.ts  i18n.ts
apps/web/tests/: a11y.spec.js  a11y.spec.mjs
docs/: accessibility-wcag-2.1-aa.md  brightspace-ai-integration-plan.md
docs/prompts/: README.md  catalog.json  eval_harness.py  u3_quiz_generation.md
docs/prompts/security/: harness.py
docs/prompts/u2_module_summary/: v1.0.0.md
docs/prompts/u3_quiz_generation/: v1.0.0.md
infra/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
infra/terraform/azure/: .gitignore  .terraform.lock.hcl  README.md  backend.hcl.example  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  (+2 more)
tests/security/: test_prompt_injection_suite.py
(+39 files in other folders)
