[project]
name = "d2l-ai-api"
version = "0.1.0"
description = "API service for d2l-ai"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "PyJWT[crypto]>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
